--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "ansible.ansible.reuseTerminal": true,
     "ansible.python.interpreterPath": "/home/work11/.venv/bin/python",
-    "ansible.python.activationScript": "~/.venv/bin/activate",
+    "ansible.python.activationScript": " /home/work11/.venv/bin/activate",
     "ansible.validation.lint.arguments": "--fix",
     "ansible.executionEnvironment.containerEngine": "auto",
     "ansible.executionEnvironment.enabled": false
